examples/invalid/example8_list_index_not_int.py
xs = [1, 2, 3]
i = True
x = xs[i]
